--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "init": "^0.1.2",
     "npx": "^10.2.2",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.6"
   }
 }
